--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,8 +52,8 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
-      KAFKA_HEAP_OPTS: "-Xmx512m -Xms256m"
-      ZOOKEEPER_MAX_CLIENT_CNXNS: 60
+      KAFKA_HEAP_OPTS: "-Xmx1g -Xms512m"
+      ZOOKEEPER_MAX_CLIENT_CNXNS: 100
       ZOOKEEPER_4LW_COMMANDS_WHITELIST: "*"
       ZOOKEEPER_SERVER_ID: 1
       ZOOKEEPER_SERVERS: zookeeper:2888:3888
@@ -67,7 +67,10 @@ services:
       - zookeeper_data:/var/lib/zookeeper/data
       - zookeeper_log:/var/lib/zookeeper/log
     restart: unless-stopped
-    mem_limit: 768m
+    mem_limit: 1.5g
+    memswap_limit: 2g
+    cpu_shares: 512
+    cpu_quota: 100000
 
   kafka:
     image: bitnami/kafka:3.5
@@ -82,16 +85,19 @@ services:
       - KAFKA_LISTENERS=PLAINTEXT://:9092
       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
       - ALLOW_PLAINTEXT_LISTENER=yes
-      - KAFKA_NUM_PARTITIONS=3
+      - KAFKA_NUM_PARTITIONS=6
       - KAFKA_DEFAULT_REPLICATION_FACTOR=1
       - KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
-      - KAFKA_HEAP_OPTS=-Xmx512m -Xms256m
+      - KAFKA_HEAP_OPTS=-Xmx1g -Xms512m
     networks:
       - app_network
     volumes:
       - kafka_data:/bitnami/kafka
     restart: unless-stopped
-    mem_limit: 1g
+    mem_limit: 2g
+    memswap_limit: 3g
+    cpu_shares: 1024
+    cpu_quota: 200000
 
   kafka-producer:
     build:
@@ -182,10 +188,10 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
       # PostgreSQL memory configuration
-      POSTGRES_SHARED_BUFFERS: 1GB
-      POSTGRES_WORK_MEM: 16MB
-      POSTGRES_MAINTENANCE_WORK_MEM: 256MB
-      POSTGRES_EFFECTIVE_CACHE_SIZE: 3GB
+      POSTGRES_SHARED_BUFFERS: 2GB
+      POSTGRES_WORK_MEM: 32MB
+      POSTGRES_MAINTENANCE_WORK_MEM: 512MB
+      POSTGRES_EFFECTIVE_CACHE_SIZE: 6GB
     ports:
       - "5438:5432"
     networks:
@@ -195,8 +201,10 @@ services:
       - ./postgres/postgresql.conf:/etc/postgresql/postgresql.conf
       - ./postgres/pg_hba.conf:/etc/postgresql/pg_hba.conf
     command: postgres -c 'config_file=/etc/postgresql/postgresql.conf'
-    mem_limit: 5g
-    memswap_limit: 6g
+    mem_limit: 8g
+    memswap_limit: 10g
+    cpu_shares: 2048
+    cpu_quota: 400000
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
@@ -220,11 +228,14 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=postgres
-      - MAX_RECORDS=2000
+      - MAX_RECORDS=20000
       - CHECK_INTERVAL=60
-      - BATCH_DELETE_SIZE=10000
+      - BATCH_DELETE_SIZE=3000
     restart: unless-stopped
-    mem_limit: 2560m
+    mem_limit: 4g
+    memswap_limit: 5g
+    cpu_shares: 1024
+    cpu_quota: 200000
 
   city-api:
     build:
