--- a/configuration.yml
+++ b/configuration.yml
@@ -116,4 +116,4 @@ visualizations:
       pngOutput: false
   queryConfig:
     queryAttribute: continent
-    queryRequirement: Asia
+    queryRequirement: Africa
