--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -254,6 +254,8 @@ services:
       - GEODB_CITIES_API_KEY=${GEODB_CITIES_API_KEY}
       - WEATHER_API_KEY=${WEATHER_API_KEY}
       - GIPHY_API_KEY=${GIPHY_API_KEY}
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     networks:
       - app_network
     healthcheck:
@@ -262,6 +264,30 @@ services:
       timeout: 10s
       retries: 5
       start_period: 10s
+    depends_on:
+      redis:
+        condition: service_healthy
+
+  redis:
+    image: redis:alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes --save 60 1
+    networks:
+      - app_network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 10s
+      retries: 5
+    restart: unless-stopped
+    mem_limit: 512m
+    memswap_limit: 1g
+    cpu_shares: 512
+    cpu_quota: 100000
 
 volumes:
   settings:
@@ -273,4 +299,6 @@ volumes:
   kafka_data:
     driver: local
   postgres_data:
+    driver: local
+  redis_data:
     driver: local 
