--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -269,13 +269,17 @@ services:
         condition: service_healthy
 
   redis:
-    image: redis:alpine
+    build:
+      context: ./redis
     container_name: redis
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
-    command: redis-server --appendonly yes --save 60 1
+      - ./dev-endpoints/static-cities-data/static-cities.json:/data/static-cities.json:ro
+    environment:
+      - LOAD_STATIC_CITIES=${LOAD_STATIC_CITIES:-false}
+    command: --appendonly yes --save 60 1
     networks:
       - app_network
     healthcheck:
