Update folder structure and documentation

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ GEODB_CITIES_API_KEY=your_api_key_here
 
 # Get your API key from https://developers.giphy.com/
 GIPHY_API_KEY=your_api_key_here
+
+# Controls whether new cities are loaded into the Redis container caching.
+# You only need to set this to true if you added/deleted cities from the
+# "cities" list of "configuration.yml" that you want to cache
+LOAD_STATIC_CITIES=true
