--- a/configuration.yml
+++ b/configuration.yml
@@ -85,18 +85,18 @@ cities:
 - Chengdu
 dynamicCities:
   current:
-  - Greater Rio de Janeiro
-  - "S\xE3o Paulo"
-  - Rio de Janeiro
-  - "Bras\xEDlia"
-  - Fortaleza
+  - Toronto
+  - Lower Mainland
+  - Metro Vancouver Regional District
+  - Montreal
+  - National Capital Region
   enabled: true
   previousBatch:
-  - Greater Rio de Janeiro
-  - "S\xE3o Paulo"
-  - Rio de Janeiro
-  - "Bras\xEDlia"
-  - Fortaleza
+  - Toronto
+  - Lower Mainland
+  - Metro Vancouver Regional District
+  - Montreal
+  - National Capital Region
 services:
   cityApi:
     numberOfCitiesForSelectedCountry: 5
@@ -112,8 +112,8 @@ visualizations:
     equatorChart:
       displayActualTrend: false
       displayLinearTrend: true
-      displayLogarithmicTrend: true
+      displayLogarithmicTrend: false
       pngOutput: false
   queryConfig:
-    queryAttribute: continent
-    queryRequirement: Europe
+    queryAttribute: timeZoneOffset
+    queryRequirement: UTC+1
